# stmj

./: .gitignore  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: deploy.yml  pr.yml
contracts/: Cargo.toml  Makefile
contracts/contracts/escrow/: Cargo.toml
contracts/contracts/escrow/src/: events.rs  lib.rs  registry_client.rs  test.rs  types.rs
contracts/contracts/escrow/test_snapshots/test/: test_cancel_after_release_fails.1.json  test_cancel_before_release_refunds_buyer.1.json  test_config_view.1.json  test_create_escrow_locks_funds.1.json  test_create_rejects_past_deadline.1.json  test_create_rejects_same_buyer_seller.1.json  test_dispute_then_resolve_split.1.json  test_full_release_pays_seller_net_of_fee_and_updates_reputation.1.json  test_initialize_rejects_excessive_fee.1.json  test_partial_release_keeps_escrow_open.1.json  test_refund_after_deadline.1.json  test_stranger_cannot_raise_dispute.1.json
contracts/contracts/registry/: Cargo.toml
contracts/contracts/registry/src/: events.rs  lib.rs  test.rs  types.rs
contracts/contracts/registry/test_snapshots/test/: test_dispute_penalises_score.1.json  test_double_initialize_panics.1.json  test_fee_accounting_and_withdraw.1.json  test_initialize_sets_admin_and_escrow.1.json  test_record_completion_updates_reputation_and_score.1.json  test_reputation_updated_at_tracks_ledger.1.json  test_unauthorized_caller_cannot_record.1.json  test_withdraw_more_than_collected_fails.1.json
deployments/: README.md
docs/: DEPLOYMENT.md  SECURITY.md
scripts/: README.md  deploy_local.sh  deploy_testnet.sh  gen_bindings.sh  init_contracts.sh  upgrade_contract.sh
web/: .env.example  .eslintrc.json  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/hooks/: query-keys.ts  use-activity.ts  use-contract-write.ts  use-escrows.ts  use-stats.ts  use-wallet.test.tsx  use-wallet.ts
web/src/lib/: activity-format.test.ts  activity-format.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  logger.ts  nav.ts  utils.ts
web/src/stores/: activity-store.ts  settings-store.ts  tx-store.test.ts  tx-store.ts  wallet-store.test.ts  (+1 more)
(+60 files in other folders)
