[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aegis Labs"]
license = "MIT"
repository = "https://github.com/aegis-labs/aegis-escrow"

[workspace.dependencies]
soroban-sdk = "23.0.0"

# Reproducible, size-optimised builds for the on-chain WASM.
# See https://developers.stellar.org/docs/build/smart-contracts/getting-started
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
